barra de navegacion - carrito

--- a/ProyectoP2/HomePage.xaml
+++ b/ProyectoP2/HomePage.xaml
@@ -14,15 +14,7 @@
                        TextColor="Black"
                        Margin="0,20"/>
 
-                <Label Text="JEB es una compañía de ropa dedicada a aquellos que buscan sentirse bien con su apariencia. Nuestra misión es ofrecer prendas llamativas y elegantes que reflejen la personalidad de quienes las usan. Creemos que cada outfit puede ser una declaración de estilo y queremos que cada cliente se sienta único y seguro de sí mismo."
-                       FontSize="16"
-                       TextColor="#333333"
-                       HorizontalOptions="FillAndExpand"
-                       VerticalOptions="Start"
-                       LineBreakMode="WordWrap"
-                       Margin="10,0,10,0"/>
-
-                <Image Source="banner.jpeg"
+                <Image Source="descarga.jpeg"
                        Aspect="AspectFill"
                        VerticalOptions="Start"
                        HorizontalOptions="Fill"
