--- a/ProyectoP2/Paginas/CrearCategoriaPage.xaml
+++ b/ProyectoP2/Paginas/CrearCategoriaPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ProyectoP2.Paginas.CrearCategoriaPage"
-             Title="Crear Categoría">
+             Title="Crear Categoría"
+             NavigationPage.HasNavigationBar="False">
 
     <StackLayout Padding="20" Spacing="15">
         <Label Text="Nombre de la Categoría" FontSize="16" />
@@ -10,7 +11,7 @@
 
         <Button Text="Crear Categoría" 
                 FontSize="16" 
-                BackgroundColor="Green" 
+                BackgroundColor="Black" 
                 TextColor="White" 
                 Clicked="OnCrearCategoriaClicked" />
     </StackLayout>
