--- a/ProyectoP2/Paginas/CrearProductoPage.xaml
+++ b/ProyectoP2/Paginas/CrearProductoPage.xaml
@@ -1,7 +1,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ProyectoP2.Paginas.CrearProductoPage"
-             Title="Crear Producto">
+             Title="Crear Producto"
+             NavigationPage.HasNavigationBar="False">
 
     <StackLayout Padding="20" Spacing="15">
 
