--- a/ProyectoP2/CarritoPage.xaml
+++ b/ProyectoP2/CarritoPage.xaml
@@ -1,34 +1,29 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ProyectoP2.CarritoPage">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             x:Class="ProyectoP2.Paginas.CarritoPage"
+             Title="Carrito de Compras">
 
     <StackLayout Padding="20">
-        <Label Text="Carrito de Compras" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center" />
+        <Label Text="Productos en el carrito" FontSize="20" HorizontalOptions="Center" />
 
         <CollectionView ItemsSource="{Binding ProductosEnCarrito}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Frame BorderColor="Gray" CornerRadius="10" Padding="10" Margin="5" BackgroundColor="#F9F9F9">
-                        <StackLayout>
-                            <Image Source="{Binding ImagenUrl}" HeightRequest="100" HorizontalOptions="Center" />
-                            <Label Text="{Binding Nombre}" FontSize="18" TextColor="Black" />
-                            <Label Text="{Binding Precio, StringFormat='Precio: {0:C}'}" FontSize="14" TextColor="Green" />
-                        </StackLayout>
-                    </Frame>
+                    <StackLayout Orientation="Horizontal" Padding="5">
+                        <Label Text="{Binding Nombre}" HorizontalOptions="StartAndExpand"/>
+                        <Label Text="{Binding Precio, StringFormat='{0:C}'}" HorizontalOptions="End"/>
+                    </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
 
-        <Button Text="Vaciar Carrito" 
-                FontSize="18" 
-                BackgroundColor="Red" 
-                TextColor="White" 
-                Clicked="OnVaciarCarritoClicked" />
+        <Label Text="Total: " FontSize="18" />
+        <Label Text="{Binding Total, StringFormat='{0:C}'}" FontSize="22" HorizontalOptions="Center" />
 
         <Button Text="Finalizar Compra" 
-                FontSize="18" 
                 BackgroundColor="Green" 
-                TextColor="White" 
-                Clicked="OnFinalizarCompraClicked" />
+                TextColor="White"
+                Command="{Binding OnFinalizarCompraClicked}" />
     </StackLayout>
 </ContentPage>
