--- a/ProyectoP2/CarritoPage.xaml
+++ b/ProyectoP2/CarritoPage.xaml
@@ -7,6 +7,7 @@
     <StackLayout Padding="20">
         <Label Text="Productos en el carrito" FontSize="20" HorizontalOptions="Center" />
 
+        <!-- Lista de productos -->
         <CollectionView ItemsSource="{Binding ProductosEnCarrito}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
